// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyWalletTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myWalletHeading"
    textDecoration={null}
  />
  <Styled(View) />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs13"
      margin={null}
      numberOfLines={null}
      text="lbl_overview_myWalletNoOfferAvailable lbl_overview_myWalletStartShop"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel="lbl_overview_myWalletShopCTA"
        accessibilityRole="link"
        anchorVariation="button"
        borderColor="black"
        borderWidth="1"
        buttonVariation="variable-width"
        centered={true}
        colorName={null}
        customStyle={Object {}}
        dataLocator="accountoverview-myWallettile-startshopbtn"
        fill="WHITE"
        fullWidth={true}
        locator=""
        margins={null}
        onPress={[Function]}
        text="lbl_overview_myWalletShopCTA"
        visible={false}
      />
    </Styled(View)>
  </View>
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_viewMyWalletCTA"
      theme={Object {}}
      url=""
      withNoLineHeight={false}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyWalletTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myWalletHeading"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View>
      <Styled(BodyCopy)
        accessibilityText=""
        data-locator="accountoverview-mywallettile-youhavewallettext"
        dataLocator=""
        fontSize="fs14"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="lbl_overview_myWalletOfferAvailable"
        textDecoration={null}
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={3}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_walletViewAllCTA"
      theme={Object {}}
      url=""
      withNoLineHeight={false}
    />
  </Styled(View)>
</Styled(View)>
`;
